# one2III

./: .clang-format  .clang-tidy  .gitmodules  CMakeLists.txt  README.MD  cppcheck.ps1
cmake/: FindOrFetch.cmake
inc/: conversionfunctions.hpp  conversionrule.hpp  conversionstates.hpp  converter.hpp  helperfunctions.hpp  rulebook.hpp  ruletype.hpp  simplemenu.hpp
src/: CMakeLists.txt  conversionfunctions.cpp  conversionrule.cpp  conversionrules.cpp  conversionrules.hpp  conversionstates.cpp  converter.cpp  converter.hpp  helper.cpp  helper.hpp  helperfunctions.cpp  one2IIImain.cpp  rulebook.cpp  ruletype.cpp  simplemenu.cpp
test/: CMakeLists.txt  conversionfunctions_test.cpp  conversionrule_test.cpp  conversionrules_test.cpp  converter_test.cpp  helper_test.cpp  helperfunctions_test.cpp  rulebook_test.cpp  ruletype_test.cpp  testmain.cpp
